formatted sensor table

--- a/Crosslands/CrosslandsDemo.Rmd
+++ b/Crosslands/CrosslandsDemo.Rmd
@@ -224,9 +224,13 @@ renderPlotly({
 ***<span style="color:#5499C7">Sensors:</span>*** `r unique(varsens$sensor)` <br>
 ***<span style="color:#5499C7">Measurements:</span>*** `r varsens$measurement` <br><br>
 ```{r echo=FALSE, warning = FALSE, results='asis'}
-kable(varsens, caption="Measurement Detail") %>%
-  kable_styling(bootstrap_options = c("striped", "hover"))
+options(knitr.table.format = "html")
+kable(varsens) %>%
+
 ```
+
+
+
 
 #Site Location {#map}
 
